# HesaiLidar_SDK_2.0

./: CMakeLists.txt  README.md  README_CN.md  change notes.md  lidar_sdk.cc  lidar_sdk.cpp  lidar_sdk.h
config/: channel_fov_filter.txt
correction/angle_correction/: JT128_Angle Correction File.csv  JT16_Angle Correction File.csv  OT128_40_Angle Correction File.csv  Pandar40E3X_Angle Correction File.csv  Pandar64E3X_Angle Correction File.csv
correction/firetime_correction/: ATX_Firetime Correction File.csv  JT128_Firetime Correction File.csv  OT128_40_Frietime Correction File.csv  OT128_Firetime Correction File.csv  Pandar40P_Firetime Correction File.csv  Pandar64_Firetime Correction File.csv  PandarQT_Firetime Correction File.csv  PandarXT-16_Firetime Correction File.csv  PandarXT-32M2X_Firetime Correction File.csv  PandarXT-32_Firetime Correction File.csv
docs/: common_error codes.md  common_error_codes.md  common_error_codes_CN.md  compile_macro_control_description.md  compile_macro_control_description_CN.md  compile_on_windows.md  compile_on_windows_CN.md  coordinate_transformation.md  coordinate_transformation_CN.md  invoke_sdk_api_command_interface.md  invoke_sdk_api_command_interface_CN.md  packet_loss_analysis.md  packet_loss_analysis_CN.md  parameter_introduction.md  parameter_introduction_CN.md  parsing_lidar_data_online.md  parsing_lidar_data_online_CN.md  parsing_pcap_file_data_offline.md  parsing_pcap_file_data_offline_CN.md  point_cloud_rearrangement_function.md  point_cloud_rearrangement_function_CN.md  save_point_cloud_data_as_a_pcd_file.md  save_point_cloud_data_as_a_pcd_file_CN.md  use_gpu_acceleration.md  use_gpu_acceleration_CN.md  visualization_of_point_cloud_data.md  visualization_of_point_cloud_data_CN.md
driver/: hesai_lidar_sdk.cc  hesai_lidar_sdk.hpp  hesai_lidar_sdk_gpu.cuh
libhesai/: CMakeLists.txt  driver_param.h  lidar_types.h
libhesai/Common/include/: auto_tick_count.h  byte_printer.h  csv_reader.hpp  hs_com.h  inner_com.h  plat_utils.h
libhesai/Common/src/: auto_tick_count.cc  plat_utils.cc
libhesai/Container/include/: blocking_ring.h  ring.h  ring_2d_shared.h  ring_2dex.h
libhesai/Container/src/: blocking_ring.cc  ring.cc  ring_2d_shared.cc  ring_2dex.cc
libhesai/Lidar/: lidar.cc  lidar.h  lidar_types.h
libhesai/Logger/include/: logger.h
libhesai/Logger/src/: logger.cc
libhesai/PtcClient/include/: client_base.h  lidar_communication_header.h  ptc_client.h  tcp_client.h  tcp_ssl_client.h
libhesai/PtcClient/src/: ptc_client.cc  tcp_client.cc  tcp_ssl_client.cc
libhesai/PtcParser/: ptc_parser.cc  ptc_parser.h
libhesai/PtcParser/include/: general_ptc_parser.h  ptc_1_0_parser.h  ptc_2_0_parser.h
libhesai/PtcParser/src/: general_ptc_parser.cc  ptc_1_0_parser.cc  ptc_2_0_parser.cc
libhesai/SerialClient/include/: serial_client.h
libhesai/SerialClient/src/: serial_client.cc
libhesai/SomeIPClient/include/: someip_client.h
libhesai/SomeIPClient/src/: someip_client.cc
libhesai/Source/include/: pcap_saver.h  pcap_source.h  serial_source.h  socket_source.h  source.h  tcp_source.h
libhesai/Source/src/: pcap_saver.cc  pcap_source.cc  serial_source.cc  socket_source.cc  source.cc  tcp_source.cc
libhesai/UdpParser/: udp_parser.cc  udp_parser.h
libhesai/UdpParser/include/: general_parser.h  udp1_4_parser.h  udp1_8_parser.h  udp2_4_parser.h  udp2_5_parser.h  udp2_6_parser.h  udp2_7_parser.h  udp3_1_parser.h  udp3_2_parser.h  udp4_3_parser.h  udp4_7_parser.h  udp6_1_parser.h  udp7_2_parser.h  udp_p40_parser.h  udp_p64_parser.h
libhesai/UdpParser/src/: general_parser.cc  udp1_4_parser.cc  udp1_8_parser.cc  udp2_4_parser.cc  udp2_5_parser.cc  udp2_6_parser.cc  udp2_7_parser.cc  udp3_1_parser.cc  udp3_2_parser.cc  udp4_3_parser.cc  udp4_7_parser.cc  udp6_1_parser.cc  udp7_2_parser.cc  udp_p40_parser.cc  udp_p64_parser.cc
libhesai/UdpParserGpu/: udp_parser_gpu.cu  udp_parser_gpu.h
libhesai/UdpParserGpu/include/: general_parser_gpu.h  general_struct_gpu.h  nvbuffer.h  return_code.h  safe_call.cuh  udp1_4_parser_gpu.h  udp1_8_parser_gpu.h  udp2_4_parser_gpu.h  udp2_5_parser_gpu.h  udp2_6_parser_gpu.h  udp2_7_parser_gpu.h  udp3_1_parser_gpu.h  udp3_2_parser_gpu.h  udp4_3_parser_gpu.h  udp4_7_parser_gpu.h  udp6_1_parser_gpu.h  udp7_2_parser_gpu.h  udp_p40_parser_gpu.h  udp_p64_parser_gpu.h  udp_parser_gpu_kernel.h
libhesai/UdpParserGpu/src/: buffer.cu  general_parser_gpu.cu  udp1_4_parser_gpu.cu  udp1_8_parser_gpu.cu  udp2_4_parser_gpu.cu  udp2_5_parser_gpu.cu  udp2_6_parser_gpu.cu  udp2_7_parser_gpu.cu  udp3_1_parser_gpu.cu  udp3_2_parser_gpu.cu  udp4_3_parser_gpu.cu  udp4_7_parser_gpu.cu  udp6_1_parser_gpu.cu  udp7_2_parser_gpu.cu  udp_p40_parser_gpu.cu  udp_p64_parser_gpu.cu  udp_parser_gpu_kernel.cu
libhesai/UdpProtocol/: fault_message.h  udp_protocol_header.h  udp_protocol_p40.h  udp_protocol_p64.h  udp_protocol_v1_4.h  udp_protocol_v1_8.h  udp_protocol_v2_4.h  udp_protocol_v2_5.h  udp_protocol_v2_6.h  udp_protocol_v2_7.h  udp_protocol_v3_1.h  udp_protocol_v3_2.h  udp_protocol_v4_3.h  udp_protocol_v4_7.h  udp_protocol_v6_1.h  udp_protocol_v7_2.h
libhesai/include/: auto_tick_count.h  plat_utils.h
libhesai/src/: auto_tick_count.cc  plat_utils.cc
test/: main.cc  main.cu  multi_test.cc  test.cc  test.cu
test_eCAL/: test.cc
test_eCAL/foxglove/: FoxglovePointCloudDefinition.hpp  FoxglovePointCloudHandler.cpp  FoxglovePointCloudHandler.h  FoxglovePointCloudStructs.hpp  FoxglovePointCloudUtilities.cpp  FoxglovePointCloudUtilities.hpp  json.hpp
test_eCAL/pointcloud/: PointCloudDefinition.hpp  PointCloudHandler.cpp  PointCloudHandler.h
test_eCAL/proto/: freespace.proto  lane.proto  pcl.proto  pcl_header.proto  pcl_pfield.proto  types.proto
test_eCAL/proto/foxglove/: CMakeLists.txt
tool/: CMakeLists.txt  README.md  las_tool.cc  packet_loss_tool.cc  pcl_tool.cc  pcl_tool.cu  ptc_tool.cc
tool_ptc/: CMakeLists.txt  ptc_tool.cc  ptc_upgrade.cc
